--- a/css/theme.css
+++ b/css/theme.css
@@ -1,10 +1,3 @@
- /* 
- color scheme 
-D7CEC7
-565656
-76323F
-C09F80
- */
  /* global styles */
  
  body {
@@ -117,14 +110,30 @@ C09F80
  .btn-quote:hover {
      background-color: #723007;
  }
+ /* footer Layout */
  
- footer {
+ .footer-box {
+     display: flex;
+     flex-flow: row wrap;
      font-size: 16px;
      color: #723007;
  }
  
- footer a {
-     color: #008000;
+ .social-links {
+     flex: 1;
+     text-align: center;
+ }
+ 
+ .social-links a {
+     display: inline-block;
+     margin: 13px;
+     font-size: 30px;
+ }
+ 
+ .site-info {
+     flex: 3;
+     text-align: center;
+     margin: 13px;
  }
  /*style rules for small screen < 480px width - media query*/
  
@@ -156,6 +165,16 @@ C09F80
          line-height: 1.5;
      }
      .btn {
+         margin: 5px;
+     }
+     .footer-box {
+         flex-flow: column wrap;
+     }
+     .social-links a {
+         margin: 5px;
+         font-size: 25px;
+     }
+     .site-info {
          margin: 5px;
      }
  }
