--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+:root {
+  --malachite-green: #61e786;
+  --honey-dew: #edffec;
+  --pineapple: #48435c;
+  --davys-grey: #5a5766;
+}
+
 body {
-  margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  font-family: 'Mali', cursive;
+  background-color: var(--honey-dew);
 }
