--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,38 +1,68 @@
 .header {
-    width: 10vw;
-    height: 100vh;
-    display: flex;
     justify-content: center;
     align-items: center;
     background: rgba(231, 97, 194, .7);
+    height: 100vh;
+    width: 10vw;
+    display: flex;
+    justify-content: center;
+}
+
+.header-text {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 .header-text span {
-    height: 42px;
+    height: 50px;
     width: 50px;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
     border: 2px solid #ffffff;
     color: #61e786;
-    font-size: 2rem;
-    font-weight: bold;
-    transform: rotate(30deg);
     background-color: rgba(255, 255, 255, .3);
 }
 
-span:nth-child(1),
-span:nth-child(6) {
+.header-text span:nth-child(1),
+.header-text span:nth-child(6) {
     color: rgb(231, 95, 192);
     margin-top: 1px;
     background-color: rgba(255, 255, 255, .9);
 }
 
-span:nth-child(odd) {
+.header-text span:nth-child(odd) {
+    transform: skew(-15deg);
+}
+
+.header-text span:nth-child(even) {
     transform: skew(15deg);
 }
 
-span:nth-child(even) {
-    transform: skew(-15deg);
+@media (min-width: 320px) and (max-width: 480px) {
+    .header {
+        width: 100%;
+        height: 10vh;
+    }
+
+    .header-text {
+        flex-direction: row;
+        font-size: 1.4rem;
+        line-height: 23px;
+    }
+
+    .header-text span {
+        height: 30px;
+        width: 27px;
+        border: 1px solid #ffffff;
+    }
+
+    .header-text span:nth-child(odd) {
+        transform: skewY(-15deg);
+    }
+
+    .header-text span:nth-child(even) {
+        transform: skewY(15deg);
+    }
 }
