--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+
 :root {
     --malachite-green: #61e786;
     --honey-dew: #edffec;
@@ -7,5 +9,5 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Mali', cursive;
+    font-family: 'Roboto Mono', monospace;
 }
