--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -16,6 +16,7 @@
 
 @media (min-width:320px) and (max-width:480px) {
     .footer span {
-        margin: 0 12px;
+        display: block;
+        font-size: 0.8rem;
     }
 }
