--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,68 +1,47 @@
 .header {
-    justify-content: center;
-    align-items: center;
-    background: rgba(125, 17, 40, .7);
-    height: 100vh;
-    width: 10vw;
-    display: flex;
-    justify-content: center;
+  height: 15vh;
+  padding: 0.8rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-text {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    text-align: center;
-    font-size: 2rem;
-    font-weight: bold;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .header-text span {
-    height: 50px;
-    width: 50px;
-    border: 2px solid #ffffff;
-    color: #61e786;
-    background-color: rgba(255, 255, 255, .3);
+  flex: 1;
+  height: 3.1rem;
+  width: 3.1rem;
+  border: 0.06rem solid var(--primary-color);
+  background-color: #ffffff;
+  color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-text span:nth-child(1),
 .header-text span:nth-child(6) {
-    color: rgb(125, 17, 40);
-    margin-top: 1px;
-    background-color: rgba(255, 255, 255, .9);
-}
-
-.header-text span:nth-child(odd) {
-    transform: skew(-15deg);
-}
-
-.header-text span:nth-child(even) {
-    transform: skew(15deg);
+  color: #ffffff;
+  background-color: var(--primary-color);
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-    .header {
-        width: 100%;
-        height: 10vh;
-    }
-
-    .header-text {
-        flex-direction: row;
-        font-size: 1.4rem;
-        line-height: 23px;
-    }
-
-    .header-text span {
-        height: 30px;
-        width: 27px;
-        border: 1px solid #ffffff;
-    }
-
-    .header-text span:nth-child(odd) {
-        transform: skewY(-15deg);
-    }
-
-    .header-text span:nth-child(even) {
-        transform: skewY(15deg);
-    }
+  .header {
+    width: 100%;
+    height: 10vh;
+  }
+  .header-text {
+    font-size: 1.4rem;
+  }
+  .header-text span {
+    height: 2rem;
+    width: 1.6rem;
+  }
 }
